--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,8 +1,10 @@
 bcrypt==4.0.1
+beautifulsoup4==4.12.2
 blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
+DateTime==5.2
 Flask==2.2.5
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.13.1
@@ -15,10 +17,13 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 psycopg2-binary==2.9.7
+pytz==2023.3
 requests==2.31.0
+soupsieve==2.4.1
 SQLAlchemy==2.0.20
 typing_extensions==4.7.1
 urllib3==2.0.4
 Werkzeug==2.2.3
 WTForms==3.0.1
 zipp==3.15.0
+zope.interface==6.0
